--- a/CorujaPresentation/bin/CorujaPresentation.dll.config
+++ b/CorujaPresentation/bin/CorujaPresentation.dll.config
@@ -165,6 +165,15 @@
         <deny users="*" />  
       </authorization>
       -->
+
+
+      <customErrors mode="on">
+        <error statusCode="500"
+               redirect="~/Error/InternalServer" />
+        <error statusCode="404"
+               redirect="~/Error/NotFound" />
+      </customErrors>
+      
     </system.web>
     
     <system.webServer>
