--- a/CorujaPresentation/CorujaPresentation.csproj
+++ b/CorujaPresentation/CorujaPresentation.csproj
@@ -255,6 +255,10 @@
     <Compile Include="Migrations\201608292136345_4th.Designer.cs">
       <DependentUpon>201608292136345_4th.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609021525504_5th.cs" />
+    <Compile Include="Migrations\201609021525504_5th.Designer.cs">
+      <DependentUpon>201609021525504_5th.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -265,9 +269,9 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\CorujaDb.mdf" />
-    <Content Include="App_Data\CorujaDb_log.ldf">
-      <DependentUpon>CorujaDb.mdf</DependentUpon>
+    <Content Include="App_Data\CorujaDataBase.mdf" />
+    <Content Include="App_Data\CorujaDataBase_log.ldf">
+      <DependentUpon>CorujaDataBase.mdf</DependentUpon>
     </Content>
     <Content Include="App_Readme\Elmah.txt" />
     <Content Include="Content\AdminLTE.css" />
@@ -405,6 +409,10 @@
     <Content Include="Views\Home\Basics.cshtml" />
     <Content Include="Views\Error\NotFound.cshtml" />
     <Content Include="Views\Error\InternalServer.cshtml" />
+    <Content Include="Views\Conta\MinhaConta.cshtml" />
+    <Content Include="Views\Manage\Index.cshtml" />
+    <Content Include="Views\Conta\Perfil.cshtml" />
+    <Content Include="Views\Conta\AlterarSenha.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201606091702093_1st.resx">
@@ -418,6 +426,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201608292136345_4th.resx">
       <DependentUpon>201608292136345_4th.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609021525504_5th.resx">
+      <DependentUpon>201609021525504_5th.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -438,7 +449,6 @@
     <Folder Include="Areas\Avaliacao\Controllers\" />
     <Folder Include="Areas\Avaliacao\Models\" />
     <Folder Include="Areas\Avaliacao\Views\Shared\" />
-    <Folder Include="Views\Manage\" />
     <Folder Include="Views\Product\" />
   </ItemGroup>
   <PropertyGroup>
