--- a/CorujaPresentation/Web.config
+++ b/CorujaPresentation/Web.config
@@ -16,7 +16,7 @@
   </configSections>
  
   <connectionStrings>
-    <add name="CorujaConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CorujaDb.mdf;Initial Catalog=aspnet-CorujaPresentation-20160606053247;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="CorujaConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CorujaDataBase.mdf;Initial Catalog=aspnet-CorujaPresentation-20160606053247;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   
@@ -161,10 +161,10 @@
       -->
 
 
-      <customErrors mode="on">
+      <!--<customErrors mode="on">
         <error statusCode="500" redirect="~/Error/InternalServer" />
         <error statusCode="404" redirect="~/Error/NotFound" />
-      </customErrors>
+      </customErrors>-->
       
     </system.web>
     
