--- a/CorujaPresentation/CorujaPresentation.csproj
+++ b/CorujaPresentation/CorujaPresentation.csproj
@@ -399,10 +399,7 @@
     <Content Include="Views\Home\Produtos.cshtml" />
     <Content Include="Views\Home\FAQ.cshtml" />
     <Content Include="Views\Home\Testes.cshtml" />
-    <Content Include="Views\Admin\AdminCoruja.cshtml" />
     <Content Include="Views\Shared\_LayoutAdmin.cshtml" />
-    <Content Include="Views\Admin\DeleteRole.cshtml" />
-    <Content Include="Views\Admin\DeleteUser.cshtml" />
     <Content Include="Views\Admin\AddUserToRole.cshtml" />
     <Content Include="Views\Home\Basics.cshtml" />
     <Content Include="Views\Error\NotFound.cshtml" />
@@ -411,6 +408,10 @@
     <Content Include="Views\Manage\Index.cshtml" />
     <Content Include="Views\Conta\AlterarSenha.cshtml" />
     <Content Include="Views\Admin\ListOfUsers.cshtml" />
+    <Content Include="Views\Admin\SysUsers.cshtml" />
+    <Content Include="Views\Admin\SysUserDetails.cshtml" />
+    <Content Include="Views\Admin\AdminCoruja.cshtml" />
+    <Content Include="Views\View.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201606091702093_1st.resx">
