--- a/CorujaPresentation/Web.config
+++ b/CorujaPresentation/Web.config
@@ -13,7 +13,7 @@
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup>
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
  
   <connectionStrings>
     <add name="CorujaConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CorujaDataBase.mdf;Initial Catalog=aspnet-CorujaPresentation-20160606053247;Integrated Security=True" providerName="System.Data.SqlClient" />
